基本完成，支付

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,6 @@ spring.resources.chain.strategy.content.paths=/**
 
 #servlet
 server.port=8089
+
+#mybatis ÅäÖÃÎÄ¼şÉ¨ÃèÂ·¾¶
+mybatis.mapper-locations=classpath*:/mapping/**Mapper.xml
